--- a/src/app/components/student-list/student-list.component.html
+++ b/src/app/components/student-list/student-list.component.html
@@ -1,17 +1,24 @@
-
-<button mat-flat-button color="warn" (click)="gridChange()">View</button>
-
-<mat-form-field appearance="fill">
-  <mat-select required multiple (selectionChange)="onSelect($event)">
-    <mat-option>-- None --</mat-option>
-      <mat-option [value]="column" *ngFor="let column of columns">{{column}}</mat-option>
-    </mat-select>
-  <mat-label>Select</mat-label>
-</mat-form-field>
+<br>
+<!-- <button mat-flat-button color="primary" (click)="gridChange()">View</button> -->
+<!-- <button style="margin-left: 50px;" type="submit" mat-raised-button color="primary" (click)="addStudent()">Add Student</button> -->
 
 
-<div class="mat-elevation-z8" *ngIf="flag">
+<!-- <div class="select-columns"> -->
+  <mat-form-field class="example-full-width"appearance="outline" color="black">
+    <mat-select required multiple (selectionChange)="onSelect($event)">
+      <mat-option>-- None --</mat-option>
+        <mat-option [value]="column" *ngFor="let column of columns">{{column}}</mat-option>
+      </mat-select>
+    <mat-label style="color: black;"><b>Select Columns</b></mat-label>
+  </mat-form-field>
+<!-- </div> -->
 
+
+
+
+<div class="scroll">
+
+  <div class="table-View" >
  
  
   <table mat-table [dataSource]="students" class="mat-elevation-z8"  >
@@ -19,124 +26,126 @@
 
     <!-- Position Column -->
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef> id </th>
+      <th mat-header-cell *matHeaderCellDef> ID <br> <mat-icon (click)="sort('id')">sort</mat-icon></th>
+      <!-- <button (click)="sort('id')">s</button> -->
       <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.id}} </td>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
+     
+      <th mat-header-cell *matHeaderCellDef> STUDENT NAME  <br> <mat-icon (click)="sort('name')">sort</mat-icon></th>
       <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.name}} </td>
     </ng-container>
 
     <!-- Weight Column -->
     <ng-container matColumnDef="admissionNumber">
-      <th mat-header-cell *matHeaderCellDef> admissionNumber </th>
+      <th mat-header-cell *matHeaderCellDef> ADMISSION NUMBER <br> <mat-icon (click)="sort('admissionNumber')">sort</mat-icon> </th>
       <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.admissionNumber}} </td>
     </ng-container>
 
     <!-- Symbol Column -->
     <ng-container matColumnDef="section">
-      <th mat-header-cell *matHeaderCellDef> section </th>
+      <th mat-header-cell *matHeaderCellDef> SECTION <br> <mat-icon (click)="sort('section')">sort</mat-icon></th>
       <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.section}} </td>
     </ng-container>
 
     <ng-container matColumnDef="division">
-      <th mat-header-cell *matHeaderCellDef> division </th>
+      <th mat-header-cell *matHeaderCellDef> DIVISION<br> <mat-icon (click)="sort('division')">sort</mat-icon> </th>
       <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.division}} </td>
     </ng-container>
 
     <ng-container matColumnDef="totalMarks">
-      <th mat-header-cell *matHeaderCellDef> totalMarks </th>
+      <th mat-header-cell *matHeaderCellDef> TOTAL <br> <mat-icon (click)="sort('totalMarks')">sort</mat-icon> </th>
       <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.totalMarks}} </td>
     </ng-container>
 
     <ng-container matColumnDef="percentage">
-      <th mat-header-cell *matHeaderCellDef> percentage </th>
+      <th mat-header-cell *matHeaderCellDef> PERCENTAGE  <br> <mat-icon (click)="sort('percentage')">sort</mat-icon></th>
       <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.percentage}} </td>
     </ng-container>
 
     <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef> email </th>
+      <th mat-header-cell *matHeaderCellDef> EMAIL <br> <mat-icon (click)="sort('email')">sort</mat-icon></th>
       <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.email}} </td>
     </ng-container>
 
     <ng-container matColumnDef="result">
-      <th mat-header-cell *matHeaderCellDef> result </th>
+      <th mat-header-cell *matHeaderCellDef> RESULT <br> <mat-icon (click)="sort('result')">sort</mat-icon> </th>
       <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.result}} </td>
     </ng-container>
 
     <ng-container matColumnDef="dateOfBirth">
-      <th mat-header-cell *matHeaderCellDef> dateOfBirth </th>
+      <th mat-header-cell *matHeaderCellDef> D.O.B <br> <mat-icon (click)="sort('dateOfBirth')">sort</mat-icon> </th>
       <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.dateOfBirth | date: 'M/d/yy' }} </td>
     </ng-container>
 
     <ng-container matColumnDef="gender">
-      <th mat-header-cell *matHeaderCellDef> gender </th>
+      <th mat-header-cell *matHeaderCellDef> GENDER <br> <mat-icon (click)="sort('gender')">sort</mat-icon></th>
       <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.gender}} </td>
     </ng-container>
 
     <ng-container matColumnDef="nationality">
-      <th mat-header-cell *matHeaderCellDef> nationality </th>
+      <th mat-header-cell *matHeaderCellDef> NATIONALITY <br> <mat-icon (click)="sort('nationality')">sort</mat-icon></th>
       <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.nationality}} </td>
     </ng-container>
 
     <ng-container matColumnDef="schoolName">
-      <th mat-header-cell *matHeaderCellDef> schoolName </th>
+      <th mat-header-cell *matHeaderCellDef> SCHOOL NAME <br> <mat-icon (click)="sort('schoolName')">sort</mat-icon></th>
       <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.schoolName}} </td>
     </ng-container>
 
 
     <ng-container matColumnDef="mediumOfInstruction">
-      <th mat-header-cell *matHeaderCellDef> mediumOfInstruction </th>
+      <th mat-header-cell *matHeaderCellDef> MEDIUM <br> <mat-icon (click)="sort('mediumOfInstruction')">sort</mat-icon></th>
       <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.mediumOfInstruction}} </td>
     </ng-container>
 
 
     <ng-container matColumnDef="phoneNumber">
-      <th mat-header-cell *matHeaderCellDef> phoneNumber </th>
+      <th mat-header-cell *matHeaderCellDef> PHONE NUMBER <br> <mat-icon (click)="sort('phoneNumber')">sort</mat-icon></th>
       <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.phoneNumber}} </td>
     </ng-container>
 
     <ng-container matColumnDef="emergencyContact">
-      <th mat-header-cell *matHeaderCellDef> emergencyContact </th>
+      <th mat-header-cell *matHeaderCellDef> EMERGENCY CONTACT <br> <mat-icon (click)="sort('emergencyContact')">sort</mat-icon></th>
       <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.emergencyContact}} </td>
     </ng-container>
 
     <ng-container matColumnDef="religion">
-      <th mat-header-cell *matHeaderCellDef> religion </th>
+      <th mat-header-cell *matHeaderCellDef> RELIGION <br> <mat-icon (click)="sort('religion')">sort</mat-icon></th>
       <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.religion}} </td>
     </ng-container>
 
     <ng-container matColumnDef="fathername">
-      <th mat-header-cell *matHeaderCellDef> fathername </th>
+      <th mat-header-cell *matHeaderCellDef> FATHER NAME <br> <mat-icon (click)="sort('fathername')">sort</mat-icon></th>
       <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.fathername}} </td>
     </ng-container>
 
     <ng-container matColumnDef="occupation">
-      <th mat-header-cell *matHeaderCellDef> occupation </th>
+      <th mat-header-cell *matHeaderCellDef> OCCUPATION <br> <mat-icon (click)="sort('occupation')">sort</mat-icon></th>
       <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.occupation}} </td>
     </ng-container>
 
 
     <ng-container matColumnDef="annualIncome">
-      <th mat-header-cell *matHeaderCellDef> annualIncome </th>
+      <th mat-header-cell *matHeaderCellDef> ANNUAL INCOME <br> <mat-icon (click)="sort('annualIncome')">sort</mat-icon></th>
       <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.annualIncome}} </td>
     </ng-container>
 
 
     <ng-container matColumnDef="remark">
-      <th mat-header-cell *matHeaderCellDef> remark </th>
+      <th mat-header-cell *matHeaderCellDef> REMARK <br> <mat-icon (click)="sort('remark')">sort</mat-icon></th>
       <td mat-cell *matCellDef="let student" (click)="studentDetails(student)"> {{student.remark}} </td>
     </ng-container>
 
     <ng-container matColumnDef="edit">
-      <th mat-header-cell *matHeaderCellDef>Edit</th>
+      <th mat-header-cell *matHeaderCellDef>EDIT </th>
       <td mat-cell *matCellDef="let element"> <button (click)="editPage(element)"><mat-icon>edit</mat-icon></button></td>
     </ng-container>
 
     <ng-container matColumnDef="delete">
-      <th mat-header-cell *matHeaderCellDef>Delete</th>
+      <th mat-header-cell *matHeaderCellDef>DELETE  </th>
       <td mat-cell *matCellDef="let element" > <button (click)="deleteStudent(element)"><mat-icon>delete</mat-icon></button></td>
     </ng-container>
 
@@ -146,39 +155,12 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
-  
-   
-
-</div>
-
-<div *ngIf="flag==false" >
-
-  <div class="content">
-    <div fxLayout="row wrap" fxLayoutGap="16px grid">
-      <div fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let student of students ">
-        <mat-card class="mat-elevation-z4" (click)="studentDetails(student)" style="width: 250px; height: 300px; display: inline-block;float: left;">
-          <mat-card-header>
-            <mat-card-title>Student Details {{student.id}}</mat-card-title>
-          </mat-card-header>
-         
-          <mat-card-content>
-            {{student.name}}<br>
-            {{student.result}}<br>
-            {{student.remark}}<br>
-          </mat-card-content>
-         
-        </mat-card>
-      </div>
-    </div>
   </div>
-  
 </div>
 
-<div>
-<mat-paginator *ngIf="temp"[length]="100"
+<mat-paginator [length]="20"
               [pageSize]="10"
-              [pageSizeOptions]="[1,5, 10, 25, 100]"
+              [pageSizeOptions]="[1,2,5, 10, 25, 100]"
               aria-label="Select page"
               (page)="pagination($event)">
 </mat-paginator>
-</div>
